crates/cli/tests/snapshots/php__php_use_config_conflict_leaves_project_config_and_state_unchanged.snap
---
source: crates/cli/tests/php.rs
expression: "(output, preferred_after, alternate_after,\nproject_snapshot(&project_after, tempdir.path())?,\nresource_record_snapshots(&records, tempdir.path())?,\nenvironment.text_request_count(), environment.byte_request_count(),)"
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                1,
            ),
        ),
        stdout: "",
        stderr: "error: Project config file conflict: both \"<tempdir>/acme/pv.yml\" and \"<tempdir>/acme/pv.yaml\" exist\n",
    },
    "php: '8.3'\nroot: .\n",
    "php: '8.2'\n",
    ProjectSnapshot {
        primary_hostname: "acme.test",
        path: "acme",
        config_path: "acme/pv.yml",
        desired_php_track: Some(
            "8.3",
        ),
    },
    [],
    0,
    0,
)
