crates/cli/tests/snapshots/php__php_use_global_install_failure_leaves_default_and_state_unchanged.snap
---
source: crates/cli/tests/php.rs
expression: "(output, default_track, resource_record_snapshots(&records, tempdir.path())?,\nenvironment.text_request_count(), environment.byte_request_count(),)"
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                1,
            ),
        ),
        stdout: "",
        stderr: "error: HTTP request failed for `https://artifacts.example.test/php-8.4.8-pv1-darwin-arm64.tar.gz`: no scripted byte response\n",
    },
    Some(
        "8.3",
    ),
    [
        ResourceRecordSnapshot {
            resource_name: "frankenphp",
            track: "8.3",
            desired_state: "Installed",
            installed_version: Some(
                "8.3.24-pv1",
            ),
            current_artifact_path: Some(
                "home/.pv/resources/frankenphp/8.3/releases/8.3.24-pv1",
            ),
            usage_count: 0,
            removal_prune: false,
            removal_force: false,
        },
        ResourceRecordSnapshot {
            resource_name: "php",
            track: "8.3",
            desired_state: "Installed",
            installed_version: Some(
                "8.3.24-pv1",
            ),
            current_artifact_path: Some(
                "home/.pv/resources/php/8.3/releases/8.3.24-pv1",
            ),
            usage_count: 0,
            removal_prune: false,
            removal_force: false,
        },
    ],
    1,
    2,
)
